--- a/Modulo_5/time_to_answer/config/locales/models.pt-BR.yml
+++ b/Modulo_5/time_to_answer/config/locales/models.pt-BR.yml
@@ -4,16 +4,16 @@
         admin:
           one: Administrador
           other: Administradores
-        profile:
-          one: Perfil
-          other: Perfis
+        user:
+          one: Usuário
+          other: Usuários
       attributes:
         user:
           id: Codigo
           email: E-mail
           created_at: Criado em
           updated_at: Atualizado em
-        profile:
+        user:
           id: Codigo
           email: E-mail
           created_at: Criado em
